<resources>
    <string name="action_settings">tittle</string>
    <string name="title_activity_main">Cajeros de la ciudad de Rosario</string>
    <string name="tab1">Esta es la tab uno</string>
    <string name="tab2">Esta es la tab dos</string>
    <string name="textoSplash">Testeo del SplashScreen</string>
    <string name="TODO">TODO</string>
    <string name="app_name">CajerosRosario</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="primeradescricion">Esta va a ser una breve descipcion de la aplicacion, con su funcionamiento y algunos consejos</string>
    <string name="create">create by jackgris</string>
    <string name="otradescipcion">Despues de una breve imagen aqui se va a colocar otra descripcion, la imagen debera estar relacionada con algo</string>
    <string name="reloj">Reloj Digital</string>
    <string name="creditos">Este va a ser un pequenio texto donde se van a introducir los creditos</string>
    <string name="redlink">Esta es la lista de cajeros de la Red Link</string>
    <string name="banelco">Esta es la lista de cajeros de Banelco</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="unknown">--Unknown--</string>
    <string name="test">Testeando</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>

    <!-- Layout del Mapa General-->
    <string name="aqui_te_encuentras">Aquí es donde te encuentras</string>

    <!-- En el layout de los detalles del cajero -->
    <string name="telefono">Teléfono:</string>
    <string name="direccion">Dirección:</string>
    <string name="nombre">Nombre:</string>
    <string name="ir_mapa">Ver en el Mapa</string>

    <!-- En el layout del Mapa -->
    <string name="centrar_mapa">Centrar\nMapa</string>
    <string name="cajeros_banelco">Cajeros\nRed Banelco</string>
    <string name="cajeros_link">Cajeros\nRed Link</string>

    <!-- En el SplashScreen-->
    <string name="descripccion_imagen">Imagen de un cajero</string>

  </resources>