<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     
    <fragment 
  		android:id="@+id/mapa"
  		android:layout_width="match_parent"
  		android:layout_height="match_parent"
		class="com.google.android.gms.maps.SupportMapFragment"/>
    <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/centrar_mapa"
            android:id="@+id/buttonCentrarMapa"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="10dp"/>
    <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/cajeros_link"
            android:id="@+id/buttonCajerosLink"
            android:layout_alignTop="@+id/buttonCentrarMapa"
            android:layout_toRightOf="@+id/buttonCentrarMapa"/>
    <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/cajeros_banelco"
            android:id="@+id/buttonCajerosBanelco"
            android:layout_alignTop="@+id/buttonCajerosLink"
            android:layout_toRightOf="@+id/buttonCajerosLink"/>
</RelativeLayout>
